fix gamedef for mini 2211

--- a/mini2211.yaml
+++ b/mini2211.yaml
@@ -6,6 +6,7 @@ game:
 
 players:
   - bugspray
+  - T3
   - Anya
   - VFP
   - geraintm
@@ -30,6 +31,8 @@ aliases:
   humaneatingmonkey:
     - hem
     - humaneating monkey
+    - monkeyhuman
+    - monkeyeater
   Dunnstral:
     - dunn
   InsidiousLemons:
