update documentation for game definition + jinja template parameters

--- a/micro1078.yaml
+++ b/micro1078.yaml
@@ -27,6 +27,8 @@ aliases:
     - red
   Skygazer:
     - sky
+  hellbooks:
+    - hell b
     
 # this means datisi was replaced by georgebailey
 replacements:
